--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New ENGLAND</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <h1> New England</h1> 
 
 <body>
     <h1> NEW England</h1>
+    
     <img src=https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRpxw7ZB9jEaowDSu95UjRQtpMvgGIOHT0dRw&usqp=CAU" alt="new england map">
     <HEader>
         <nav>
