--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <title>New ENGLAND</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<h1> New England</h1> 
 
 <body>
     <h1> NEW England</h1>
-    
-    <img src=https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRpxw7ZB9jEaowDSu95UjRQtpMvgGIOHT0dRw&usqp=CAU" alt="new england map">
+    <div>
+
+        <img src=https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRpxw7ZB9jEaowDSu95UjRQtpMvgGIOHT0dRw&usqp=CAU" alt="new england map">
+    </div>
     <HEader>
         <nav>
         <li>home</li>
@@ -27,14 +28,14 @@
     <main>
         <h2>Discover New England!
         </h2>
-    
-        <p1>New England — the birthplace of America — is filled with rich history, cultural attractions, fascinating cities, scenic villages, and outdoor adventures at every turn.
-        </p1>
-         <p2>Discover white sand beaches, and lighthouses, brilliant fall foliage, expansive lakes, panoramic mountain views, and dockside restaurants with delicious seafood chowder, lobster, and blueberry pie. In New England, you’ll find a wealth of diverse travel experiences with easy access from major airports in Boston, Hartford, Providence, Montreal and New York. Discover why visitors travel back to New England again and again…
+            <p1>New England — the birthplace of America — is filled with rich history, cultural attractions, fascinating cities, scenic villages, and outdoor adventures at every turn.
+=            </p1>
+         <p2> Discover white sand beaches, and lighthouses, brilliant fall foliage, expansive lakes, panoramic mountain views, and dockside restaurants with delicious seafood chowder, lobster, and blueberry pie. In New England, you’ll find a wealth of diverse travel experiences with easy access from major airports in Boston, Hartford, Providence, Montreal and New York. Discover why visitors travel back to New England again and again…
         </p2>
         <h2>Industry Education
         </h2>
-        <img src="https://newenglandcouncil.com/assets/2018-Partnership-Directory-Cover.jpg" alt="new england">
+        <div> <img src="https://newenglandcouncil.com/assets/2018-Partnership-Directory-Cover.jpg" alt="new england">
+        </div>
         <h4>Why International Visitors?
         </h4>
         <p4>Discover New England (DNE) is a cooperative marketing alliance funded by five New England states to attract international travelers to the region. These travelers are often much more familiar with the New England “brand” than they are the individual states. DNE represents the region overseas in the UK and Ireland. DNE also conducts per-project work in Germany, Australia and New Zealand, China, France, Japan, Italy, the Netherlands and Scandinavia. Below, learn more about why international travelers are important to New England and the important role they play in the U.S. economy.
